--- a/style.css
+++ b/style.css
@@ -16,18 +16,40 @@
     --clr-accent: #16e0bd;
 
     --fs-h1: 3rem;
-    --fs-h2: 2.25;
-    --fs-h3: 1.25;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
 }
 
 @media (min-width: 800px) {
     :root {
-        --fs-h1: 4.5;
-        --fs-h2: 3.75;
-        --fs-h3: 1.5;
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
     
 }
+
+body {
+    background: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-primmary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+}
+
+/* Typography */
+
+h1, 
+h2,
+h3 {
+    line-height: 1.1;
+    margin: 0;
+}
+
+h1 { font-size: var(--fs-h1);}
+h2 { font-size: var(--fs-h2);}
+h3 { font-size: var(--fs-h3);}
