--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ nav {display: none;}
     /* background-blend-mode: soft-light;  added this to make image darker */
     color: var(--clr-light);
     text-align: center;
+    margin-bottom: 2em;
 }
 
 .title_services {
@@ -170,6 +171,8 @@ nav {display: none;}
         display: flex;
         max-width: auto;
         margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .services_paraagraph + .services_paraagraph{
@@ -178,3 +181,26 @@ nav {display: none;}
 
 }
 
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+/* button  */
+.btn {
+    display: inline-block;
+    padding: .5em 2.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
