--- a/style.css
+++ b/style.css
@@ -20,17 +20,17 @@
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
-    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
-    0.125em 0.125em 0.25em rgba(0,0,0,.15);
+    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.774),
+    0.125em 0.125em 0.25em rgba(0, 0, 0, 0.502);
 
 
 }
 
-@media (min-width: 800px) {
+@media (min-width: 800px) {                        
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
-        --fs-h3: 2rem;
+        --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
     
@@ -43,7 +43,7 @@ body {
     margin: 0;
     font-family: var(--ff-primmary);
     font-size: var(--fs-body);
-    line-height: 1;
+    line-height: 1.6;
 }
 
 img {
@@ -56,12 +56,37 @@ section {
 }
 strong { font-weight: var(--fw-bold);}
 
+
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+/* button  */
+.btn {
+    display: inline-block;
+    padding: .5em 2.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
 /* Typography */
 
 h1, 
 h2,
 h3 {
-    line-height: 1.1;
+    line-height: 1;
     margin: 0;
 }
 
@@ -89,7 +114,7 @@ h3 { font-size: var(--fs-h3);}
 .intro_subtitle,
 .about_subtitle {
     background-color: var(--clr-accent);
-    padding: 2.5em 1em;
+    padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
 }
@@ -109,12 +134,17 @@ nav {display: none;}
     box-shadow: var(--bs);
 }
 
+.intro_subtitle {
+    display: inline-block;
+
+}
+
 @media (min-width: 600px) {
     .intro {
         display: grid;
         width: min-content;
         margin: 0 auto;
-        grid-column-gap: 1em;
+        grid-column-gap: 2em;
          grid-template-areas:
            "img title"
            "img subtitle";
@@ -124,7 +154,7 @@ nav {display: none;}
 
  .intro_img {
       grid-area: img;
-      max-width: 400px;
+      max-width: 250px;
       position: relative;
       z-index: 2;
  }
@@ -145,11 +175,11 @@ nav {display: none;}
     background-color: var(--clr-dark);
     background-image: url(./images/services-bg.jpg);
     background-size: cover;
-    /* background-blend-mode: soft-light;  added this to make image darker */
+     background-blend-mode: soft-light;  /*added this to make image darker */
     color: var(--clr-light);
     text-align: center;
-    margin-bottom: 2em;
 }
+
 
 .title_services {
     color: var(--clr-accent);
@@ -159,48 +189,87 @@ nav {display: none;}
 .title_services::after {
     content: '';
     display: block;
-    width: 25%;
+    width: 2em;
     height: 1px;
     margin: 0.5rem auto 1em;
     background-color: var(--clr-light);
-    opacity: 0,5;
+    opacity: 0,25;
 }
+
+.services_paragraph {
+    margin-bottom: 4em;
+}
+
+.service {
+    max-width: 500px;
+    margin: 0 auto;}
 
 @media (min-width: 800px){ 
-    .services_paraagraph {
+    .services_paragraph {
         display: flex;
-        max-width: auto;
-        margin: 0 auto;
+        max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
+        
     }
 
-    .services_paraagraph + .services_paraagraph{
-        margin: 2em;
+    .services_paragraph + .services_paragraph{
+        margin-left: 3em;
     }
 
 }
 
-:focus {
-    outline: 3px solid var(--clr-accent);
-    outline-offset: 3px;
+/* about me  */
+
+.about-me {
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
-/* button  */
-.btn {
-    display: inline-block;
-    padding: .5em 2.5em;
-    background: var(--clr-accent);
-    color: var(--clr-dark);
-    text-decoration: none;
-    cursor: pointer;
-    font-size: .8rem;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: var(--fw-bold);
-    transition: transform 200ms ease-in-out;
+.about-me_img {
+    box-shadow: var(--bs);
 }
 
-.btn:hover {
-    transform: scale(1.1);
+@media (min-width: 600px){
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas: 
+         "title img"
+         "subtitle img"
+         "text img";
+         grid-column-gap: 2em;
+    }
 }
+
+ 
+.title_about {
+    grid-area: title;
+}
+
+.about_subtitle {
+    grid-column: 1/-1;
+    grid-row: 2;
+    position: relative;
+    left: -1em;
+    width: calc(100%+3em);
+    padding-left: 1em;
+    padding-right: calc(200px +4em);
+}
+
+.about-me_img {
+    grid-area: img;
+    position: relative;
+    z-index: 2;
+    object-fit:contain;
+  }
+
+
+
+      
+
+
+
+
+
+
