--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@
 
 @media (min-width: 800px) {                        
     :root {
-        --fs-h1: 4.5rem;
-        --fs-h2: 3.75rem;
-        --fs-h3: 1.5rem;
-        --fs-body: 1.125rem;
+        --fs-h1: 4rem;
+        --fs-h2: 3rem;
+        --fs-h3: 1rem;
+        --fs-body: 0.9rem;
     }
     
 }
@@ -47,14 +47,16 @@ body {
     
 }
 
+
+section {
+    padding: 5em 2em;
+}
+
 img {
     display: block;
     max-width: 100%;
 }
 
-section {
-    padding: 5em 2em;
-}
 strong { font-weight: var(--fw-bold);}
 
 
@@ -95,24 +97,24 @@ h1 { font-size: var(--fs-h1);}
 h2 { font-size: var(--fs-h2);}
 h3 { font-size: var(--fs-h3);}
 
-.section_title {
+.section__title {
     margin-bottom: .25em;
 
 }
 
-.title_intro {
+.section__title--intro {
     font-weight: var(--fw-reg);}
 
-.title_intro strong {
+.section__title--intro strong {
         display: block;
     }
 
-    .section_subtitle {
+    .section__subtitle {
     margin: 0;
     font-size: var(--fs-h3);
 }
 
-.intro_subtitle,
+.section__subtitle--intro,
 .about_subtitle {
     background-color: var(--clr-accent);
     padding: .25em 1em;
@@ -120,10 +122,34 @@ h3 { font-size: var(--fs-h3);}
     margin-bottom: 1em;
 }
 
+.work_subtitle{
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
 
 /* header */
 
-nav {display: none;}
+     .header{
+        display: flex;
+        justify-content: space-between;
+        padding: 1em;
+
+     }
+
+     .logo{
+        max-width: 100px;
+     }
+
+
+     .nav{
+        position: fixed;
+
+     }
+
+
+
 
 /* intro section  */
 
@@ -170,6 +196,7 @@ nav {display: none;}
     width: calc(100%+1.5em);
  }
 
+
 /* What I do section  */
 
 .services {
@@ -194,10 +221,10 @@ nav {display: none;}
     height: 1px;
     margin: 0.5rem auto 1em;
     background-color: var(--clr-light);
-    opacity: 0,25;
+    opacity: 0.25;
 }
 
-.services_paragraph {
+.service_paragraph {
     margin-bottom: 4em;
 }
 
@@ -206,7 +233,7 @@ nav {display: none;}
     margin: 0 auto;}
 
 @media (min-width: 800px){ 
-    .services_paragraph {
+    .service_paragraph {
         display: flex;
         max-width: 1000px;
         margin-left: auto;
@@ -214,11 +241,11 @@ nav {display: none;}
         
     }
 
-    .services_paragraph + .services_paragraph{
-        margin-left: 3em;
+    .service + .service{
+        margin-left: 2em;
     }
-
 }
+
 
 /* about me  */
 
@@ -241,7 +268,7 @@ nav {display: none;}
          "text img";
          grid-column-gap: 2em;
     }
-}
+
 
  
 .title_about {
@@ -264,8 +291,7 @@ nav {display: none;}
     z-index: 2;
     object-fit:contain;
   }
-
-
+}
 
 /* portfolio section  */
 
@@ -279,7 +305,7 @@ nav {display: none;}
 .portfolio{
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-     grid-column-gap: 1em;
+     grid-column-gap: 1em; /*i'm not sure why I added this */
      
 }
 
@@ -293,7 +319,7 @@ nav {display: none;}
           transform 750ms cubic-bezier(.5, 0, .5, 1),
           opacity 250ms linear;
     width: 100%;
-    height: 100%;
+    height: 100%;           /* Added this to make image fit */
     object-fit: cover;
 }
 
@@ -321,7 +347,8 @@ nav {display: none;}
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
-    margin-top: auto;
+    
+    
   
 }
 
