--- a/style.css
+++ b/style.css
@@ -115,14 +115,14 @@ h3 { font-size: var(--fs-h3);}
 }
 
 .section__subtitle--intro,
-.about_subtitle {
+.section__subtitle--about{
     background-color: var(--clr-accent);
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
 }
 
-.work_subtitle{
+.section__subtitle--work {
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
     margin-bottom: 2em;
@@ -131,7 +131,7 @@ h3 { font-size: var(--fs-h3);}
 
 /* header */
 
-     .header{
+     header{
         display: flex;
         justify-content: space-between;
         padding: 1em;
@@ -145,9 +145,80 @@ h3 { font-size: var(--fs-h3);}
 
      .nav{
         position: fixed;
+        background-color: var(--clr-dark);
+        color: var(--clr-light);
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
+
+        transform: translateX(100%);
+        transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 
      }
 
+     .nav__list {
+        list-style: none;
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+     }
+
+     .nav__link {
+        color: inherit;
+        font-weight: var(--fw-bold);
+        font-size: var(--fs-h2);
+        text-decoration: none;
+     }
+
+     .nav_link:hover {
+        color: var(--clr-accent);
+     }
+
+     .nav-toggle {
+        padding: .5em;
+        background: transparent;
+        border: 0;
+        cursor: pointer;
+        position:absolute;
+        right: 1em;
+        top: 1em;
+        z-index: 1000;
+     }
+   
+
+    .hamburger {
+        display:block;
+        position: relative;
+    }
+
+    .hamburger,
+    .hamburger::before,
+    .hamburger::after {
+        background-color: var(--clr-accent);
+        width: 2em;
+        height: 3px;
+        border-radius: 1em;
+        transition: transform 250ms ease-in-out;
+    }
+       
+    .hamburger::before,
+    .hamburger::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+    }
+
+    .hamburger::before { top: 6px;}
+    .hamburger::after {bottom: 6px;}
+       
+    
 
 
 
@@ -157,11 +228,11 @@ h3 { font-size: var(--fs-h3);}
     position: relative;
 }
 
-.intro_img {
+.intro__img {
     box-shadow: var(--bs);
 }
 
-.intro_subtitle {
+.section__subtitle--intro {
     display: inline-block;
 
 }
