--- a/style.css
+++ b/style.css
@@ -486,8 +486,18 @@ h3 { font-size: var(--fs-h3);}
     padding: .5em;
 }
       
+.portfolio-item-individual {
+    padding: 0 2em 2em;
+    max-width: 700px;
+    margin: 0 auto;
+}
 
+.portfolio-item-individual p {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 
+}
 
 
 
