--- a/style.css
+++ b/style.css
@@ -39,9 +39,15 @@
 
 html {
     scroll-behavior: smooth;
+    height: 100vh;
+  
+ 
 }
 
 body {
+    display: flex;                     /*added to try maker footer stick */
+    flex-direction: column;
+    min-height: 100vh;
     background: var(--clr-light);
     color: var(--clr-dark);
     margin: 0;
@@ -49,8 +55,9 @@ body {
     font-size: var(--fs-body);
     line-height: 1.6;
     
+  
+    
 }
-
 
 section {
     padding: 5em 2em;
@@ -97,7 +104,7 @@ h3 {
     margin: 0;
 }
 
-h1 { font-size: var(--fs-h1);}
+h1 { font-size: 3em;}
 h2 { font-size: var(--fs-h2);}
 h3 { font-size: var(--fs-h3);}
 
@@ -287,7 +294,8 @@ h3 { font-size: var(--fs-h3);}
     text-align: right;
     position: relative;
     left: -1.5em;
-    width: calc(100% + 1.5em);
+    width: calc(100% + 2em);
+    height: 4em;
  }
 }
 
@@ -397,6 +405,7 @@ h3 { font-size: var(--fs-h3);}
     background-color: var(--clr-dark);
     color: var(--clr-light);
     text-align: center;
+    
 }
 
 
@@ -445,9 +454,10 @@ h3 { font-size: var(--fs-h3);}
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
-    
-    
-  
+}
+
+footer {
+    margin-top: auto;
 }
 
 .footer a {
@@ -485,6 +495,8 @@ h3 { font-size: var(--fs-h3);}
 .social-list__link {
     padding: .5em;
 }
+
+/*portfolio html item.*/
       
 .portfolio-item-individual {
     padding: 0 2em 2em;
@@ -498,7 +510,6 @@ h3 { font-size: var(--fs-h3);}
     margin-right: auto;
 
 }
-
 
 
 
